--- a/src/app/indoor-plants/indoor-plants.component.css
+++ b/src/app/indoor-plants/indoor-plants.component.css
@@ -46,7 +46,7 @@
             display: block;
             position: absolute;
             top: calc(2.2rem + 2rem + 4.5rem + 1rem + 1rem + 2px);
-            width: max(300px, 15vw);
+            width: min(280px, 32vw);
 
             border: 1px solid #25523B;
             z-index: 1;
@@ -179,6 +179,8 @@
 
             cursor: pointer;
             transition: linear .15s;
+
+            box-sizing: border-box;
         }
 
         .card:hover .card-details{
@@ -209,7 +211,7 @@
                 color: #25523B;
 
                 font-family: Raisonne Demibold,sans-serif;
-                font-size: 0.9rem;
+                font-size: min(0.9rem, 2.5vw);
                 font-weight: 400;
                 letter-spacing: .1rem;
                 line-height: 1.3;
@@ -249,7 +251,7 @@
 
                     grid-row: 1;
 
-                    font-size: 1.4rem;
+                    font-size: min(1.4rem, 4.8vw);
                     font-weight: 500;
                     color:#25523B;
                 }
@@ -262,13 +264,152 @@
 
                     grid-row: 2;
 
-                    font-size: 1.1rem;
+                    font-size: min(1.1rem, 4.4vw);
                     font-weight: 500;
                     color:#25523B;
 
                     margin-block: .25rem;
                 }
 
-@media (max-width: 1440px) {
+.mobile-container{
+    display: none;
+    gap: 40px;
+
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-left: 40px;
+    padding-right: 40px;
+
+    max-width: 100%;
+    width: 1440px;
+    box-sizing: border-box;
+}
+
+    .mobile-sort-btn{
+        display: none;
+        align-items: center;
+        justify-content: center;
+
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 1rem;
+
+        padding-left: 1rem;
+        padding-right: 1rem;
+
+        height: auto;
+
+        width: 1440px;
+        max-width: 100%;
+
+        box-sizing: border-box;
+    }
+
+        .mobile-sort-btn > button {
+            border: 1px solid #25523B;
+            border-radius: 20px;
+
+            padding: 8px 16px;
+            width: 100%;
     
+            background-color: white;
+            color: #25523B;
+
+            text-align: center;
+            font-size: min(1.2rem, 5vw);
+        }
+
+    .mobile-products-container{
+        display: none;
+        grid-template-columns: repeat(2, auto);
+        justify-items: center;
+        gap: 1rem;
+
+        margin-top: 2.5rem;
+        margin-bottom: 10vh;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 1rem;
+        padding-right: 1rem;
+    
+        width: 1440px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+
+        .side-sort-wrapper{
+            position: fixed;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            top: 0; left: 0;
+            background: rgba(0,0,0 0.9);
+            height: 100%;
+            width: 100%;
+            z-index: 9;
+            -webkit-backdrop-filter: brightness(60%);
+            backdrop-filter: brightness(60%);
+        }
+
+        .side-sort{
+            display: flex;
+            justify-content: start;
+
+            width: 70%;
+            height: 100vh;
+            top: 0;
+            left: -70%;
+            position: fixed;
+            z-index: 10;
+
+            background-color: white;
+            /* -webkit-backdrop-filter: blur(.5rem);
+            backdrop-filter: blur(.5rem); */
+
+            opacity: 0;
+            transition: opacity 350ms ease-out, left 350ms ease-out;
+        }
+
+        .side-sort.show {
+            opacity: 1;
+            left: 0;
+        }
+
+@media (max-width: 940px) {
+    .mobile-container{
+        display: grid;
+    }
+
+    .mobile-products-container{
+        display: grid;
+    }
+
+    .mobile-sort-btn{
+        display: flex;
+    }
+
+    .card-details-grid{
+        margin-top: .3rem;
+    }
+
+    .add-to-cart-btn{
+        justify-content: center;
+        left: 0;
+        transform: translateX(0);
+        letter-spacing: 0;
+
+        padding: 8px;
+        margin: 8px;
+        width: calc(100% - 16px);
+    }
+
+    .sort{
+        display: none;
+    }
+
+    .container{
+        display: none;
+    }
 }
