--- a/src/app/indoor-plants/indoor-plants.component.css
+++ b/src/app/indoor-plants/indoor-plants.component.css
@@ -341,7 +341,7 @@
 
         .side-sort-wrapper{
             position: fixed;
-            display: flex;
+            display: none;
             align-items: center;
             justify-content: center;
             top: 0; left: 0;
@@ -351,13 +351,6 @@
             -webkit-backdrop-filter: brightness(60%);
             backdrop-filter: brightness(60%);
 
-            z-index: -1;
-            opacity: 0;
-            transition: opacity 350ms ease-out, z-index 200ms ease-out;
-        }
-
-        .show-wrapper{
-            opacity: 1;
             z-index: 9;
         }
 
@@ -376,7 +369,7 @@
             background-color: white;
 
             opacity: 0;
-            transition: opacity 350ms ease-out, left 350ms ease-out;
+            transition: opacity 250ms ease-out, left 250ms ease-out;
         }
 
         .show-sort{
