Cart component updated to be fully responsive for small screens.

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,3 +1,5 @@
+/* Refactor!! media querries!!!!! */
+
 .cart-container{
     display: grid;
     min-height: calc(100vh - 4.5rem);
@@ -11,7 +13,7 @@
 
 .cart-products-container{
     grid-column: span 2;
-    margin-inline: 10%;
+    margin-inline: 4%;
 }
 
 .cart-product{
@@ -37,16 +39,20 @@
 }
 
 .description-container{
-    width: 50%;
+    width: 75%;
+    height: 95%;
+
     display: flex;
     flex-direction: column;
     -webkit-box-pack: justify;
     justify-content: space-between;
+
+    align-self: center;
     align-items: flex-start;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+
     margin-left: 1.25rem;
-    font-size: 0.85rem;
+    font-size: 1.1rem;
+
     line-height: 1;
     letter-spacing: normal;
     font-weight: 500;
@@ -60,16 +66,16 @@
 
 .cart-order-container{
     grid-column: 3;
-    margin-inline: 10%;
+    margin-inline: 4%;
+    height: fit-content;
 }
 
 .cart-order{
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    height: 15vh;
-    width: 70%;
-    padding: 3rem;
+    height: fit-content;
+    width: 80%;
+    padding: 40px;
     margin: 1rem;
 
     border: 1px solid rgb(229, 229, 229);
@@ -79,32 +85,51 @@
     position: sticky;
 
     place-content: center space-between;
+    box-sizing: border-box;
 }
 
 .name{
     font-weight: 900;
-    margin-bottom: 0.7rem;
+    font-size: 1.3rem;
+    margin-bottom: 0.4rem;
 }
 
 .price-container{
     display: flex;
-    flex-flow: row nowrap;
+    flex-direction: row;
 
     place-content: center space-between;
 }
 
-.price{
-    width: 25%;
-    font-family: Inter,"Inter Fallback",sans-serif;
-    font-weight: 600;
+.secondary-container{
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    -webkit-box-pack: end;
-    justify-content: flex-end;
-    align-items: flex-end;
-    align-self: stretch;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: rgb(255, 255, 255);
+    color: #25523B;
+    cursor: pointer;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.price{
+    font-family: Inter,"Inter Fallback",sans-serif;
+}
+
+.remove-btn{
+    background-color: rgb(255, 255, 255);
+    color: #25523B;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    text-decoration: none;
+    border: 0px;
+    padding: 0;
 }
 
 .total{
@@ -129,8 +154,8 @@
     color: rgb(255, 255, 255);
     cursor: pointer;
     outline: none;
-    margin: 0px;
-    font-size: 1.3rem;
+    margin-top: 20%;
+    font-size: 1.1rem;
     font-weight: bold;
     text-align: center;
     border-radius: 2px;
@@ -143,14 +168,177 @@
     background-color: #16422b;
 }
 
-.remove-btn{
-    background-color: rgb(255, 255, 255);
-    color: #25523B;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 600;
-    text-decoration: none;
-    border: 0px;
-    padding: 0;
-    margin-top: 3.5rem;
+@media (max-width: 376px) {
+    .cart-product{
+        height: 15vh !important;
+        margin-bottom: .5rem !important;
+    }
+
+    .description-container{
+        font-size: 0.85rem;
+    }
+
+    .remove-btn{
+        font-size: 0.8rem !important;
+    }
+
+    .name{
+        font-size: 0.95rem;
+    }
+
+    .price{
+        font-size: 0.95rem !important;
+    }
+
+    .cart-order{
+        width: 70% !important;
+    }
+}
+
+@media (min-width: 326px) and (max-width: 1440px) {
+    .description-container{
+        font-size: 0.95rem;
+    }
+
+    .remove-btn{
+        font-size: 0.95rem !important;
+    }
+
+    .name{
+        font-size: 1.05rem;
+    }
+
+    .price{
+        font-size: 1.05rem !important;
+    }
+
+    .cart-order{
+        width: 70% !important;
+    }
+}
+
+@media (max-width: 425px) {
+    .cart-products-container{
+        width: 92% !important;
+        margin-inline: 0 !important;
+    }
+
+    .name{
+        margin-bottom: 0;
+    }
+
+    .remove-btn{
+        display: flex;
+        font-size: 14px;
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 700px) {
+    .cart-container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 2%;
+        margin-bottom: 5;
+        filter: blur(0);
+        color: #25523B;
+
+        box-sizing: border-box;
+    }
+
+    .cart-product{
+        align-self: center;
+    }
+    
+    .cart-products-container{
+        width: 75%;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        margin-inline: 0 !important;
+        
+        box-sizing: border-box;
+    }
+    
+    
+    .cart-order-container{
+        display: flex;
+        width: 100%;
+        margin: 0 !important;
+        margin-top: 5% !important;
+        box-sizing: border-box;
+    }
+    
+    .cart-order{
+        display: flex;
+        flex-direction: column;
+        height: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0 !important;
+    
+        border: none;
+        border-radius: 0;
+        box-shadow: none;
+    }
+
+    .order-btn{
+        margin-top: 5% !important;
+    }
+
+    .remove-btn{
+        font-size: 0.9rem;
+    }
+
+    .price{
+        font-size: 1rem;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 700px){
+    .cart-order{
+        width: calc(75% - 2rem) !important; /* 1rem margin cart product */
+    }
+}
+
+@media (max-width: 1025px) {
+    .total{
+        font-size: 1.05rem;
+    }
+    
+    .total-price{
+        font-size: 1.05rem;
+    }
+
+    .cart-order-container{
+        margin-inline: 0;
+        margin-right: 2%;
+    }
+
+    .cart-order{
+        margin-block: 1rem;
+        width: 100%;
+        padding: 30px;
+    }
+
+    .cart-product{
+        width: 85%;
+    }
+
+    .picture-container{
+        width: 35%;
+    }
+
+    .order-btn{
+        font-size: 0.9rem;
+        margin-top: 15%;
+        padding: 12px 24px;
+    }
+}
+
+@media (min-width: 700px) and (max-width: 1440px) {
+    .cart-order{
+        width: 90%;
+    }
 }
