--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -15,11 +15,11 @@
                 <p class="description">asd</p>
                 <p class="size">asd</p>
                 <p class="color">red</p>
-                <button class="remove-btn">&#10005; Премахни</button>
-            </div>
-            <div class="price">
-                <!-- <p>{{item.price}} лв.</p> -->
-                <p>3 лв.</p>
+                <div class="secondary-container">
+                    <!-- <p>{{item.price}} лв.</p> -->
+                    <button class="remove-btn">&#10005; Премахни</button>
+                    <p class="price">3 лв.</p>
+                </div>
             </div>
         </div>
     </div>
