Updated footer padding and height for phone screens.

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -30,6 +30,13 @@
         }
 
 @media (max-width: 425px) {
+    .footer-container{
+        min-height: auto;
+        height: auto;
+
+        padding-block: 4vh;
+    }
+
     .nav{
         font-size: 1rem;
     }
