--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "~swiper/swiper-bundle.css";
+@import "~@ng-select/ng-select/themes/default.theme.css";
 /* Css reset */
 
 html, body, div, span, applet, object, iframe,
@@ -65,5 +67,3 @@ html,body
     height: 60vh;
     margin: auto;
 }
-
-@import "~swiper/swiper-bundle.css";
